# ailp-research

./: .gitignore  Cargo.toml  README.md
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
crates/aerodrome/: Cargo.toml
crates/aerodrome/src/: lib.rs
crates/backtest/: Cargo.toml
crates/backtest/src/: dlmm.rs  lib.rs  replay.rs
crates/core/: Cargo.toml
crates/core/src/: history.rs  lib.rs  network.rs
crates/defillama/: Cargo.toml
crates/defillama/src/: lib.rs
crates/evm/: Cargo.toml
crates/evm/src/: lib.rs
crates/solana/: Cargo.toml
crates/solana/src/: lib.rs
crates/strategy/: Cargo.toml
crates/strategy/src/: lib.rs
docs/: architecture.md  capacity-truth-audit.md  execution-dry-run.md  first-data-analysis.md  go-no-go.md  hot-pool-autoresearch.md  live-readiness.md  lvr-attribution.md  multi-path.md  pilot-base-aerodrome.md  pool-discovery.md  pool-pivot.md  real-regime-replay.md  replay-weth-aero.md  server-runbook.md  solana-apr100-refresh.md  solana-apr100-stage-result.md  solana-pivot.md  strategy-research.md  tail-risk-scenarios.md  walk-forward.md
research/hot-pool/: README.md
scripts/: fork-sim-rebalance.sh  meteora-dlmm-account-probe.cjs  meteora-dlmm-account-probe.sh  meteora-dlmm-join-flow-snapshots.cjs  meteora-dlmm-live-shadow.sh  meteora-dlmm-snapshot.cjs  meteora-dlmm-snapshot.sh  meteora-dlmm-swap-flow.cjs  meteora-dlmm-swap-flow.sh
