[workspace]
members = [
  "apps/cli",
  "crates/aerodrome",
  "crates/backtest",
  "crates/core",
  "crates/defillama",
  "crates/evm",
  "crates/strategy",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/local/autopool-research"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
url = "2.5"

autopool-backtest = { path = "crates/backtest" }
autopool-aerodrome = { path = "crates/aerodrome" }
autopool-core = { path = "crates/core" }
autopool-defillama = { path = "crates/defillama" }
autopool-evm = { path = "crates/evm" }
autopool-strategy = { path = "crates/strategy" }
