[package]
name = "autopool-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
autopool-aerodrome.workspace = true
autopool-core.workspace = true
autopool-defillama.workspace = true
autopool-evm.workspace = true
autopool-strategy.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
